# livekit-booking-system

./: README.md  config.py  latency_tracker.py  livekit_worker.py  logging_setup.py  main.py  pyproject.toml  wsgi.py
.cursor/plans/: voice-2e84d4d9.plan.md
instance/: clinic.db
logs/: voice_agent.log.2025-11-17  voice_agent.log.2025-11-18  voice_agent.log.2025-11-20  voice_agent.log.2025-11-21  voice_agent.log.2025-11-23  voice_agent.log.2025-12-02
migrations/versions/: e9c933e01c68_addde.py
src/: app_factory.py
src/models/: __init__.py  appointments_db.py  patient_db.py
src/routes/: dashboard.py
src/routes/livekit/: main.py  tools.py
src/services/: clinic_service.py  context_manager.py  db_context.py  redis_service.py
src/static/css/: dashboard.css
src/static/js/: dashboard.js
src/templates/: dashboard.html
tests/: conftest.py  test_booking.py
