[project]
name = "voice-agent-pstn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cartesia>=2.0.15",
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "livekit>=1.0.18",
    "livekit-agents[cartesia,deepgram,elevenlabs,openai,silero,turn-detector]~=1.0",
    "livekit-plugins-cartesia>=1.2.18",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv>=1.2.1",
    "redis>=7.0.1",
]
